<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameoverFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:scrollX="250dp"
        android:src="@drawable/background_image"
        android:tint="#1A000000" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.15" />

        <TextView
            android:id="@+id/feedback_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@color/text_primary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_guideline"
            tools:text="Gratulation!" />

        <androidx.cardview.widget.CardView
            android:id="@+id/explanationCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="16dp"
            app:layout_constrainedHeight="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feedback_text">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_horizontal"
                android:orientation="vertical"
                android:paddingLeft="12dp"
                android:paddingTop="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="0dp"
                android:showDividers="middle">

                <TextView

                    android:id="@+id/explanation_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/ergebnis"
                    android:textColor="@color/text_dark_secondary"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/gray_500"
                    tools:layout_editor_absoluteY="37dp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <TextView
                        android:id="@+id/result_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:textColor="@color/text_dark_primary"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toTopOf="@id/text_correct"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_chainStyle="packed"
                        tools:text="18/20" />

                    <TextView
                        android:id="@+id/text_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/richtig"
                        android:textColor="@color/text_dark_primary"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/result_score" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="172dp"
                        android:layout_height="172dp"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/progress_circle"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:max="20"
                        tools:progress="18" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="end"
                    android:orientation="horizontal">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/share_24px"
                        android:drawableLeft="@drawable/share_24px"
                        android:drawablePadding="4dp"
                        android:fontFamily="@font/roboto"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:text="@string/teilen"
                        android:textAllCaps="false"
                        android:textColor="@color/text_dark_primary"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableTint="@color/text_dark_primary" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.8" />

        <Button
            android:id="@+id/button_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/home_24px"
            android:drawableLeft="@drawable/home_24px"
            android:drawablePadding="4dp"
            android:fontFamily="@font/roboto"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingEnd="8dp"
            android:paddingRight="8dp"
            android:text="@string/hauptmen"
            android:textAllCaps="false"
            android:textColor="@color/text_primary"
            android:textSize="16sp"
            app:drawableTint="@color/text_primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>